2008-11-24  Neil Williams  <linux@codehelp.co.uk>

	* backend/gda/qof-gda.c (qgda_modify), backend/sqlite/qof-sqlite.c
	(qsql_modify), (update_dirty), qof/qofsql.c (string_param_to_sql),
	(collect_kvp),(qof_sql_entity_update): Implement support for
	QOF_TYPE_COLLECT for SQL using KVP slots.

2008-11-16  Neil Williams  <linux@codehelp.co.uk>

	* backend/sqlite/qof-sqlite.c: mark kvpvalue_to_sql 
	as unused.
	* qof/kvpframe.c, qof/qofmath128.c, qof/qofmath128.h,
	qof/qofnumeric.c : Remove inline functions to make a
	better fit with gcc -Winline.
	* qof/qofutil.c (qof_util_param_to_string): Ensure
	qof_util_param_to_string always returns a newly allocated
	string, even for NULL values.

2008-06-18  Neil Williams  <linux@codehelp.co.uk>

	* backend/sqlite/qof-sqlite.c: Mark an unused function
	whilst development continues to find a general solution.
	* qof/kvpframe.c, qof/qofmath128.c, qof/qofmath128.h,
	* qof/qofnumeric.c: Remove 'inline' declarations that
	gcc-4.3 considers as unwarranted or which would increase
	code size.

2008-05-25  Neil Williams  <linux@codehelp.co.uk>

	* backend/Makefile.am: Comment out estron backend - may be
	better to package that from within estron itself.
	* configure.ac: Skip estron detection - let estron depend
	on QOF instead of both on each other.
	* qof/qofdate.c (date_normalise), (qof_date_parse),
	qof/qofstrptime.c (strptime_internal), qof/test/test-date.c 
	(run_print_scan_tests), (run_qofdate_test) : Implement test
	for date formats based on "%s" and fix resolution of epoch-seconds
	into QofDate.

2008-05-04  Neil Williams  <linux@codehelp.co.uk>

 * qofutil.c (qof_util_param_to_string): Ensure even an 
   empty KvpFrame returns a newly allocated string 

2008-04-18  Neil Williams  <linux@codehelp.co.uk>

	* backend/dwi/dwi-backend.c (dwiend_load_foundation),
	(dwiend_run_query), (dwiend_compile_query), (dwiend_session_begin):
	* backend/dwi/qofmap.c (qof_map_new), (qof_map_destroy),
	(qof_map_add_field), (qof_map_add_match),